did sprint 3 setup (with the exception of the refer to backend 3 thing)
